--- a/views/list.ejs
+++ b/views/list.ejs
@@ -14,7 +14,7 @@
         <% newListItems.forEach(function(item) { %>
             <form action="/delete" method="post">
                 <div class="item">
-                    <input type="checkbox">
+                    <input type="checkbox" name="checkbox" value="<%= item._id %>" onChange="this.form.submit()">
                     <p><%= item.name %></p>
                 </div>
             </form>
