--- a/views/list.ejs
+++ b/views/list.ejs
@@ -21,7 +21,7 @@
         <% }) %>
             <form action="/" method="post">
                 <input type="text" name="newItem" placeholder="New item" autocomplete="off">
-                <button type="submit">+</button>
+                <button type="submit" value="<%= kindOfDay %>" name="list">+</button>
             </form>
 
     </div>
