--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="box" id="heading">
-        <h1> <%= kindOfDay %> </h1>
+        <h1> <%= listTitle %> </h1>
     </div>
     <div class="box">
         <% newListItems.forEach(function(item) { %>
@@ -17,11 +17,12 @@
                     <input type="checkbox" name="checkbox" value="<%= item._id %>" onChange="this.form.submit()">
                     <p><%= item.name %></p>
                 </div>
+                <input type="hidden" name="listName" value="<%= listTitle %>"></input>
             </form>
         <% }) %>
             <form action="/" method="post">
                 <input type="text" name="newItem" placeholder="New item" autocomplete="off">
-                <button type="submit" value="<%= kindOfDay %>" name="list">+</button>
+                <button type="submit" value="<%= listTitle %>" name="list">+</button>
             </form>
 
     </div>
